fix: fix BLI row alignment issue caused by tooltip (#5702)

--- a/frontend/src/components/UI/Table/table.module.css
+++ b/frontend/src/components/UI/Table/table.module.css
@@ -10,6 +10,9 @@
 
 .verticalAlignTop td {
     vertical-align: top;
+}
+
+.noPaddingBottom td {
     padding-bottom: 0 !important;
 }
 
